--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <a href="курс верстки/index.html">Урок 1</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="курс верстки/index.html">Урок 1</a>
+                        <a href="HW-razmetka/index.html">Урок 2.14 (разметка страницы)</a>
                     </li>
                 </ul>
             </div>
@@ -118,5 +118,6 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
