--- a/HW-razmetka/index.html
+++ b/HW-razmetka/index.html
@@ -27,8 +27,8 @@
       <br />
       желаемых результатов. Клиенты могут также воспользоваться услугами
       персональных тренировок и консультаций по здоровому образу жизни
-    </p>
-    <img src="gym-image.jpg" width="1000" alt="фитнес клуб внутри" />
+    </p> <br>
+    <img src="gym-image.jpg" width="1000" alt="фитнес клуб внутри" /> <br>
     <h2>ГРУППОВЫЕ ЗАНЯТИЯ</h2>
     <p>
       В новом филиале «Fit.Studio» будут проводиться различные групповые
@@ -49,10 +49,11 @@
       width="1000"
       controls
       poster="gym-image.jpg"
-    ></video>
+    ></video> <br>
     <p>
       Приглашаем всех желающих посетить новый филиал фитнес клуба "FitLife" и
       начать заботиться о своем здоровье и фитнесе прямо сейчас!
     </p>
   </body>
 </html>
+
