--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
                     <li class="content__list-item">
                         <a href="HW-razmetka/index.html">Урок 2.14 (разметка страницы)</a>
                     </li>
+                     <li class="content__list-item">
+                        <a href="hw-table/index.html">Урок 2.35 (таблицы(календарь))</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
@@ -118,6 +121,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
