--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
                     <li class="content__list-item">
                         <a href="hw forma/index.html">Урок 2.42 (формы)</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="fit-studio/article.html">Урок 2.50 (статья фит студия)</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
@@ -124,6 +127,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
